--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>QuickDucky2Digi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="ducky2digi.js" defer></script>
+    <script src="QuickDucky2Digi.js" defer></script>
 </head>
 <body>
     <div class="container">
