--- a/index.html
+++ b/index.html
@@ -94,17 +94,18 @@
 
         // Function to copy output text
         function copy() {
-            copyTextToClipboard(document.getElementById("out").value);
-            showNotification();
+            const outputText = document.getElementById("out").value;
+            copyTextToClipboard(outputText);
+            showNotification(); // Show notification after copying
         }
 
         // Function to show the notification
         function showNotification() {
             const notification = document.getElementById("notification");
-            notification.style.display = 'block';
+            notification.style.display = 'flex'; // Use flex to show the notification
             setTimeout(() => {
-                notification.style.display = 'none';
-            }, 2000); // Hide notification after 2 seconds
+                notification.style.display = 'none'; // Hide after 2 seconds
+            }, 2000);
         }
     </script>
 </body>
