--- a/mobile.html
+++ b/mobile.html
@@ -5,9 +5,20 @@
     <title>QuickDucky2Digi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="mobile.css"> <!-- Add this line -->
     <script src="QuickDucky2Digi.js" defer></script>
 </head>
+<body>
+    <script>
+        // Function to check if the device is mobile
+        function isMobileDevice() {
+            return /Mobi|Android/i.test(navigator.userAgent);
+        }
+
+        // Redirect to mobile.html if the device is mobile
+        if (isMobileDevice()) {
+            window.location.href = 'mobile.html';
+        }
+    </script>
 <body>
     <div class="container">
         <header>
