--- a/mobile.html
+++ b/mobile.html
@@ -5,9 +5,8 @@
     <title>QuickDucky2Digi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mobile.css">
     <script src="QuickDucky2Digi.js" defer></script>
-</head>
-<body>
     <script>
         // Function to check if the device is mobile
         function isMobileDevice() {
@@ -19,6 +18,7 @@
             window.location.href = 'mobile.html';
         }
     </script>
+</head>
 <body>
     <div class="container">
         <header>
