--- a/mobile.html
+++ b/mobile.html
@@ -4,20 +4,8 @@
     <meta charset="UTF-8">
     <title>QuickDucky2Digi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="mobile.css"> <!-- Mobile-specific stylesheet -->
     <script src="QuickDucky2Digi.js" defer></script>
-    <script>
-        // Function to check if the device is mobile
-        function isMobileDevice() {
-            return /Mobi|Android/i.test(navigator.userAgent);
-        }
-
-        // Redirect to mobile.html if the device is mobile
-        if (isMobileDevice()) {
-            window.location.href = 'mobile.html';
-        }
-    </script>
 </head>
 <body>
     <div class="container">
