--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
         // Function to show the notification
         function showNotification() {
             const notification = document.getElementById("notification");
-            notification.classList.add('show'); // Use class to show the notification
+            notification.classList.add('show'); // Add class to show the notification
             setTimeout(() => {
-                notification.classList.remove('show'); // Hide after 2 seconds
+                notification.classList.remove('show'); // Remove class to hide after 2 seconds
             }, 2000);
         }
     </script>
